welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:23: error: not enough arguments for method flower: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	flower()
              ^FlowerPot:25: error: not enough arguments for method flower: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	flower()
              ^FlowerPot:30: error: not enough arguments for method flower: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	flower()
              ^FlowerPot:34: error: not enough arguments for method flower: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	flower()
              ^FlowerPot:36: error: not enough arguments for method flower: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	flower()
              ^